--- a/frontend/src/Components/Side-Menu/side-menu.scss
+++ b/frontend/src/Components/Side-Menu/side-menu.scss
@@ -2,6 +2,76 @@
     width: 100%;
     max-width:257px;
     height: 91vh;
-    background: red;
+    padding: 0 0.8rem 0 0;
+    
+}
+
+//Button 
+
+.compose {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    color: #6A6B6D;
+    gap: 16px;
+    width: 145px;
+    border-radius: 50px;
+    background: #fff;
+    height: 48px;
+    box-shadow: rgba(0, 0, 0, 0.233) 1px 1px 2px 1px;
+    cursor: pointer;
+    margin: 1.6rem 0.8rem;
+    i {
+        font-size: 2.4rem;
+        animation-name: colorful;
+        animation-duration: 10s;
+        animation-timing-function: ease-in-out;
+        animation-iteration-count:infinite;
+        color: #EA4335;
+    }
+}
+
+
+//Color animation for PLUS icon
+@keyframes colorful {
+
+    25% {
+        color: #4285F4;
+    }
+    50% {
+        color: #34A853;
+    }
+    75% {
+        color: #FBBC05;
+    }
+
+} 
+
+.menu-options-container {
+
+    padding: 0 0 1.2rem 0;
+    font-weight: 200;
+}
+
+.menu-options {
+    
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding:0 2.8rem 0 2.8rem;
+    height: 32px;
+    gap: 21px;
+    display: flex;
+    align-items: center;
+    
+    color: #6A6B6D;
+    
+    i{
+        
+        font-size: 1.6rem;
+    }
+    h1 {
+        font-weight: 400;
+    }
 }
 
