--- a/frontend/src/Components/Side-Menu/side-menu.scss
+++ b/frontend/src/Components/Side-Menu/side-menu.scss
@@ -22,6 +22,8 @@
     box-shadow: rgba(0, 0, 0, 0.233) 1px 1px 2px 1px;
     cursor: pointer;
     margin: 1.6rem 0.8rem;
+    font-size: 1.5rem;
+    font-weight: 500;
     i {
         font-size: 2.4rem;
         animation-name: colorful;
