Message state and mail container added

--- a/frontend/src/Global/global.scss
+++ b/frontend/src/Global/global.scss
@@ -26,6 +26,9 @@
 
 .side-top-menu {
     display: flex;
-    justify-content: space-between;
+    
 }
 
+.top-mails-container {
+    width: 100%;
+}
