Firebase auth installed

--- a/frontend/src/Components/Header/Header.scss
+++ b/frontend/src/Components/Header/Header.scss
@@ -53,9 +53,21 @@
         
 
         //Gmail Profile Picture
-        i:last-of-type {
+        .fa-user-circle {
             font-size: 4rem;
         }
     }
 
+}
+//Profile photo holder
+
+.pp-holder {
+    max-width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+
+    img {
+        max-width: 40px;
+    }
 }
