--- a/frontend/src/Components/Mails/mails.scss
+++ b/frontend/src/Components/Mails/mails.scss
@@ -5,3 +5,17 @@
     padding: 1.1rem 2rem;
 }
 
+.single-mail-container {
+
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    
+
+    h1 {
+        font-size: 4rem;
+    }
+    p{
+        font-size: 2rem;
+    }
+}
