--- a/frontend/src/Components/Message/message.scss
+++ b/frontend/src/Components/Message/message.scss
@@ -1,6 +1,7 @@
 .message-container   {
     display: flex;
     position: absolute;
+    z-index: 9;
     right: 0 ;
     bottom: 0;
 }
@@ -15,7 +16,7 @@
     display: flex;
         flex-direction: column;
         box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.103);
-   
+   background: #fff;
     
     header {
             margin: 0 -1rem;
